[code and images] added bg image for compact devices at two different densities - started on composable for home screen compact

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,4 +13,7 @@
     <dimen name="inner_circle_padding_top">10dp</dimen>
 
     <!-- Rounded -->
+
+    <!-- Navigation Component Dimens -->
+<!--    <dimen name="navbar_horizontal_padding">30dp</dimen>-->
 </resources>
