--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,10 +16,13 @@
 
     <!-- Navigation Component Dimens -->
     <dimen name="navbar_item_horizontal_padding">5dp</dimen>
+    <dimen name="navdrawer_item_horizontal_padding">10.dp</dimen>
+    <dimen name="navdrawer_spacer_height">100.dp</dimen>
 
     <!-- Shadow Offsets -->
     <dimen name="navbar_shadow_offset_y">2.dp</dimen>
     <dimen name="topbar_shadow_offset_y">-2.dp</dimen>
-    <dimen name="appbars_shadow_blur_radius">10.dp</dimen>
-    <dimen name="appbars_shadow_shape_radius">30.dp</dimen>
+    <dimen name="navdrawer_shadow_offset_y">2.dp</dimen>
+    <dimen name="shadow_blur_radius">10.dp</dimen>
+    <dimen name="shadow_shape_radius">30.dp</dimen>
 </resources>
